<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_menus_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:minWidth="140dp"
            android:textColor="@color/grey_828282"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="30,000원" />

        <TextView
            android:id="@+id/tv_menus_price_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/cart_menus_price"
            android:textColor="@color/grey_828282"
            android:textSize="14sp"
            app:layout_constraintRight_toLeftOf="@id/tv_menus_price"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_delivery_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:minWidth="140dp"
            android:textColor="@color/grey_828282"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_delivery_price_title"
            tools:text="30,000원" />

        <TextView
            android:id="@+id/tv_delivery_price_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:laout_marginEnd="8dp"
            android:text="@string/cart_delivery_fee"
            android:textColor="@color/grey_828282"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/tv_menus_price_title"
            app:layout_constraintTop_toBottomOf="@id/tv_menus_price_title" />

        <View
            android:id="@+id/view_line"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/grey_828282"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_delivery_price_title"
            app:layout_constraintTop_toBottomOf="@id/tv_delivery_price_title" />

        <TextView
            android:id="@+id/tv_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="end"
            android:minWidth="140dp"
            android:textColor="@color/black_000000"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_line"
            tools:text="23,000원" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/cart_total_price"
            android:textColor="@color/black_000000"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tv_menus_price_title"
            app:layout_constraintTop_toBottomOf="@id/view_line" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_order"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/sel_main_btn"
            android:elevation="10dp"
            android:textColor="@color/white_ffffff"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_total_price"
            tools:text="203,000원 주문하기" />

        <TextView
            android:id="@+id/tv_left_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/black_000000"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_order"
            tools:text="30000원" />

        <TextView
            android:id="@+id/tv_recent_viewed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/cart_recent_viewed"
            android:textColor="@color/black_000000"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_left_price" />

        <TextView
            android:id="@+id/tv_view_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cart_view_all"
            android:textColor="@color/black_000000"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_recent_viewed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_recent_viewed" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_recent_viewed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_recent_viewed"
            tools:listitem="@layout/item_menu_time_stamp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>