<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="menuPrice"
            type="Long" />

        <variable
            name="totalPrice"
            type="Long" />

        <variable
            name="deliveryFee"
            type="Long" />

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_F8F7F7"
        >
        <View
            android:id="@+id/view_top_line"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/grey_DDDDDD"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_marginEnd="16dp"
            android:id="@+id/tv_menus_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:minWidth="140dp"
            android:setCashString="@{menuPrice}"
            android:textColor="@color/grey_828282"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_menus_price_title"
            tools:text="30,000원" />

        <TextView
            android:layout_marginTop="24dp"
            android:id="@+id/tv_menus_price_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/cart_menus_price"
            android:textColor="@color/grey_828282"
            android:textSize="14sp"
            app:layout_constraintRight_toLeftOf="@id/tv_menus_price"
            app:layout_constraintTop_toBottomOf="@id/view_top_line" />

        <TextView
            android:id="@+id/tv_delivery_fee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:minWidth="140dp"
            android:setCashString="@{deliveryFee}"
            android:textColor="@color/grey_828282"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/tv_menus_price"
            app:layout_constraintTop_toTopOf="@id/tv_delivery_price_fee"
            tools:text="30,000원" />

        <TextView
            android:id="@+id/tv_delivery_price_fee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/cart_delivery_fee"
            android:textColor="@color/grey_828282"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/tv_menus_price_title"
            app:layout_constraintTop_toBottomOf="@id/tv_menus_price_title" />

        <View
            android:id="@+id/view_line"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/grey_DDDDDD"
            app:layout_constraintEnd_toEndOf="@id/tv_menus_price"
            app:layout_constraintStart_toStartOf="@id/tv_delivery_price_fee"
            app:layout_constraintTop_toBottomOf="@id/tv_delivery_price_fee" />

        <TextView
            android:id="@+id/tv_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="end"
            android:minWidth="140dp"
            android:setCashString="@{totalPrice}"
            android:textColor="@color/black_000000"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/tv_menus_price"
            app:layout_constraintTop_toBottomOf="@id/view_line"
            tools:text="23,000원" />

        <TextView
            android:layout_marginBottom="100dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/cart_total_price"
            android:textColor="@color/black_000000"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_menus_price_title"
            app:layout_constraintTop_toBottomOf="@id/view_line" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>